@@ -1,60 +1,22 @@
-FROM python:3.10.15-slim AS build
+FROM debian:bookworm-slim AS build
+SHELL ["/bin/bash", "-c"]
 
-RUN apt-get -y update && apt-get install -y apt-utils && \
-    apt-get install -y -qq -o=Dpkg::Use-Pty=0 build-essential gfortran zlib1g-dev \
-    libhdf5-dev libcurl4-openssl-dev libboost-dev cmake wget python3 python3-pip
+RUN apt-get -y update && apt-get install -y apt-utils && apt-get remove --purge gcc
+RUN apt-get install -y -qq -o=Dpkg::Use-Pty=0 clang mold ninja-build cmake libc++-dev libc++abi-dev libcurl4-openssl-dev \
+            git curl wget ca-certificates python3 python3-pip
+RUN rm $(which gcc) || true
+RUN rm $(which g++) || true
+RUN rm -rf /var/lib/apt/lists/* && rm /usr/bin/ld
+RUN ln -s $(which mold) /usr/bin/ld
 
 COPY . /vcellroot
 
 RUN mkdir -p /vcellroot/build/bin
 WORKDIR /vcellroot/build
 
-RUN /usr/bin/cmake \
-    -DOPTION_TARGET_MESSAGING=ON \
-    -DOPTION_TARGET_PARALLEL=OFF \
-    -DOPTION_TARGET_PETSC=OFF \
-    -DOPTION_TARGET_CHOMBO2D_SOLVER=OFF \
-    -DOPTION_TARGET_CHOMBO3D_SOLVER=OFF \
-    -DOPTION_TARGET_SMOLDYN_SOLVER=ON \
-    -DOPTION_TARGET_FV_SOLVER=ON \
-    -DOPTION_TARGET_STOCHASTIC_SOLVER=ON \
-    -DOPTION_TARGET_NFSIM_SOLVER=ON \
-    -DOPTION_TARGET_MOVINGBOUNDARY_SOLVER=ON \
-    -DOPTION_TARGET_SUNDIALS_SOLVER=ON \
-    -DOPTION_TARGET_HY3S_SOLVERS=OFF \
-    .. && \
-    make && \
-    ctest -VV
+RUN /usr/bin/cmake .. -G Ninja -DOPTION_TARGET_MESSAGING=ON -DOPTION_TARGET_DOCS=OFF
+RUN ninja --verbose
+RUN ctest -VV
 
-FROM eclipse-temurin:17 AS jre-build
-
-# Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules ALL-MODULE-PATH \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
-
-# Define base image and copy in jlink created minimal Java 17 environment
-FROM python:3.10.15-slim
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-COPY --from=jre-build /javaruntime $JAVA_HOME
-
-# now we have Java 17 and Python 3.10.15 installed
-ENV DEBIAN_FRONTEND=noninteractive
-ENV LANG=en_US.UTF-8
-
-RUN apt-get -y update && \
-    apt-get install -y apt-utils && \
-    apt-get install -q -y --no-install-recommends curl dnsutils
-
-RUN apt-get install -y -qq -o=Dpkg::Use-Pty=0 gcc gfortran zlib1g \
-    libhdf5-103 libhdf5-cpp-103 libcurl4-openssl-dev zip
-
-COPY --from=build /vcellroot/build/bin /vcellbin
-
-WORKDIR /vcellbin
-ENV PATH=/vcellbin:$PATH
+WORKDIR /vcellroot/build/bin
+ENV PATH="/vcellroot/build/bin:${PATH}"
